# Smart_Info_Notifier

./: .env.example  .gitignore  Pipfile  pyproject.toml  requirements.txt
config/: setting.yaml  sources.xlsx
src/: config.py  run_scraper.py
src/core/: loader.py
src/crawler/crawler/: items.py  pipelines.py  setting.py
src/crawler/crawler/spiders/: generic_spider.py
src/models/: source.py
src/utils/: logger.py
tests/: conftest.py  test_run_scraper.py
